log/build_2024-04-23_17-32-44/autoturtle/stderr.log
  File "/home/ajak2k/Sriram_AjayShankar_ws/install/autoturtle/lib/python3.10/site-packages/autoturtle/swim_node.py", line 43
    def main()
              ^
SyntaxError: expected ':'

